<resources>
    <string name="app_name">Expenses</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="registrar">Registrar</string>
    <string name="ingresar">Ingresar</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="total_gastos">Total gastos</string>
    <string name="_00">00</string>
    <string name="ingresar_gasto">Ingresar gasto</string>
    <string name="seleccione_una_opcion">Seleccione una opcion</string>
    <string name="guardar">Guardar</string>
    <string name="detalle_de_gastos">Detalle de gastos</string>
    <string name="textView_gasto">%1$s : %2$s</string>
    <string-array name="option">
        <item>Bancos</item>
        <item>Comida</item>
        <item>Transporte</item>
        <item>Diversion</item>
        <item>Licor</item>
        <item>Otros</item>
    </string-array>
</resources>